# S3_Test_Project

./: .gitignore  README.md
satellite_field_monitoring/: .env.example  README.md  assignment.md  docker-compose.yml  environment.yml  fields.csv  makefile  pyproject.toml  report.txt  requirements.txt
satellite_field_monitoring/docker/: Dockerfile
satellite_field_monitoring/satellite_field_monitoring/: main.py  satellite.py
satellite_field_monitoring/satellite_field_monitoring/services/: satellite.py
satellite_field_monitoring/src/: main.py
satellite_field_monitoring/src/services/: ndvi.py  satellite.py
satellite_field_monitoring/tests/: conftest.py  test_satellite.py
