[tool.poetry]
name = "SatelliteImageRetriever"
version = "0.1.0"
description = "Application to retrieve images from nasa url and calculate ndvi"
authors = ["Nicola Gernone <nicola.gernone02@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pandas = "^2.0.2"
boto3 = "^1.26.153"
moto = "^4.1.11"
pytest = "^7.3.2"
requests-mock = "^1.11.0"
python-decouple = "^3.8"
pytest-mock = "^3.10.0"
numpy = "^1.24.3"
GDAL = { version = "3.6.4", optional = true }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
